Fixing an error with alignment in preview

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,12 +206,13 @@ em {
 
 #back-to-images,
 .go-back,
-.submit {
+.submit,
+#change-it {
     margin-right: 30px;
     margin-left: 30px;
 }
 
-
+/****************Message Container**********************/
 
 .message-container{
     margin: 3em auto;
@@ -250,6 +251,74 @@ em {
     background-color: #224d17;
     color: #d9df1d;
 }
+
+/***********************Preview Container********************************/
+
+#card-preview {
+    margin-top: 3rem;
+}
+
+
+#user-msg {
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 19px;
+    padding: 5px;
+    margin: 5px;
+    position: relative;
+    top: 60px;
+}
+
+
+#card-img {
+    position: relative;
+    left: 347px;
+}
+
+#card-img,
+.user-msg-frame {
+    width: 540px;
+    height: auto;
+    background-repeat: no-repeat;
+    background-position: cover;
+    background-size: cover;
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin: 0px auto;
+}
+
+#framed-msg {
+    width: 100%;
+    height: 350px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-position: cover;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+ 
+   
+}
+
+.preview-btn {
+    width: 50%;
+    height: auto;
+    margin: 10px auto;
+}
+
+#send-card {
+    background-color: #224d17;
+    color: #d9df1d;
+    margin-bottom: 3rem;
+}
+
+
 .send-another-container{
     width: 90%;
     height: 300px;
